// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form Form item hidden noStyle should not work when hidden 1`] = `
LoadedCheerio {
  "0": <form
    class="dcloud-form dcloud-form-horizontal"
  >
    <div
      class="dcloud-form-item dcloud-form-item-hidden"
    >
      <div
        class="dcloud-row dcloud-form-item-row"
      >
        <div
          class="dcloud-col dcloud-form-item-control"
        >
          <div
            class="dcloud-form-item-control-input"
          >
            <div
              class="dcloud-form-item-control-input-content"
            >
              <input
                class="dcloud-input"
                id="light"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Form Form item hidden should work 1`] = `
LoadedCheerio {
  "0": <form
    class="dcloud-form dcloud-form-horizontal"
  >
    <div
      class="dcloud-form-item dcloud-form-item-hidden"
    >
      <div
        class="dcloud-row dcloud-form-item-row"
      >
        <div
          class="dcloud-col dcloud-form-item-control"
        >
          <div
            class="dcloud-form-item-control-input"
          >
            <div
              class="dcloud-form-item-control-input-content"
            >
              <input
                class="dcloud-input"
                id="light"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Form Form.Item should support data-*、aria-* and custom attribute 1`] = `
LoadedCheerio {
  "0": <form
    class="dcloud-form dcloud-form-horizontal"
  >
    <div
      class="dcloud-form-item"
    >
      <div
        aria-hidden="true"
        cccc="bbbb"
        class="dcloud-row dcloud-form-item-row"
        data-text="123"
      >
        <div
          class="dcloud-col dcloud-form-item-control"
        >
          <div
            class="dcloud-form-item-control-input"
          >
            <div
              class="dcloud-form-item-control-input-content"
            >
              text
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Form form should support disabled 1`] = `
LoadedCheerio {
  "0": <form
    class="dcloud-form dcloud-form-horizontal"
  >
    <div
      class="dcloud-form-item"
    >
      <div
        class="dcloud-row dcloud-form-item-row"
      >
        <div
          class="dcloud-col dcloud-col-4 dcloud-form-item-label"
        >
          <label
            class=""
            for="disabled"
            title="Form disabled"
          >
            Form disabled
          </label>
        </div>
        <div
          class="dcloud-col dcloud-col-14 dcloud-form-item-control"
        >
          <div
            class="dcloud-form-item-control-input"
          >
            <div
              class="dcloud-form-item-control-input-content"
            >
              <label
                class="dcloud-checkbox-wrapper"
              >
                <span
                  class="dcloud-checkbox"
                >
                  <input
                    class="dcloud-checkbox-input"
                    id="disabled"
                    type="checkbox"
                    value=""
                  />
                  <span
                    class="dcloud-checkbox-inner"
                  />
                </span>
                <span>
                  disabled
                </span>
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-form-item"
    >
      <div
        class="dcloud-row dcloud-form-item-row"
      >
        <div
          class="dcloud-col dcloud-col-4 dcloud-form-item-label"
        >
          <label
            class=""
            title="Radio"
          >
            Radio
          </label>
        </div>
        <div
          class="dcloud-col dcloud-col-14 dcloud-form-item-control"
        >
          <div
            class="dcloud-form-item-control-input"
          >
            <div
              class="dcloud-form-item-control-input-content"
            >
              <div
                class="dcloud-radio-group dcloud-radio-group-outline"
              >
                <label
                  class="dcloud-radio-wrapper"
                >
                  <span
                    class="dcloud-radio"
                  >
                    <input
                      class="dcloud-radio-input"
                      type="radio"
                      value="apple"
                    />
                    <span
                      class="dcloud-radio-inner"
                    />
                  </span>
                  <span>
                     Apple 
                  </span>
                </label>
                <label
                  class="dcloud-radio-wrapper"
                >
                  <span
                    class="dcloud-radio"
                  >
                    <input
                      class="dcloud-radio-input"
                      type="radio"
                      value="pear"
                    />
                    <span
                      class="dcloud-radio-inner"
                    />
                  </span>
                  <span>
                     Pear 
                  </span>
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-form-item"
    >
      <div
        class="dcloud-row dcloud-form-item-row"
      >
        <div
          class="dcloud-col dcloud-col-4 dcloud-form-item-label"
        >
          <label
            class=""
            title="Input"
          >
            Input
          </label>
        </div>
        <div
          class="dcloud-col dcloud-col-14 dcloud-form-item-control"
        >
          <div
            class="dcloud-form-item-control-input"
          >
            <div
              class="dcloud-form-item-control-input-content"
            >
              <input
                class="dcloud-input"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-form-item"
    >
      <div
        class="dcloud-row dcloud-form-item-row"
      >
        <div
          class="dcloud-col dcloud-col-4 dcloud-form-item-label"
        >
          <label
            class=""
            title="Select"
          >
            Select
          </label>
        </div>
        <div
          class="dcloud-col dcloud-col-14 dcloud-form-item-control"
        >
          <div
            class="dcloud-form-item-control-input"
          >
            <div
              class="dcloud-form-item-control-input-content"
            >
              <div
                class="dcloud-select dcloud-select-single dcloud-select-show-arrow"
              >
                <div
                  class="dcloud-select-selector"
                >
                  <span
                    class="dcloud-select-selection-search"
                  >
                    <input
                      aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                      aria-autocomplete="list"
                      aria-controls="rc_select_TEST_OR_SSR_list"
                      aria-haspopup="listbox"
                      aria-owns="rc_select_TEST_OR_SSR_list"
                      autocomplete="off"
                      class="dcloud-select-selection-search-input"
                      id="rc_select_TEST_OR_SSR"
                      readonly=""
                      role="combobox"
                      style="opacity: 0;"
                      type="search"
                      unselectable="on"
                      value=""
                    />
                  </span>
                  <span
                    class="dcloud-select-selection-placeholder"
                  />
                </div>
                <span
                  aria-hidden="true"
                  class="dcloud-select-arrow"
                  style="user-select: none;"
                  unselectable="on"
                >
                  <span
                    aria-label="down"
                    class="anticon anticon-down dcloud-select-suffix"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-form-item"
    >
      <div
        class="dcloud-row dcloud-form-item-row"
      >
        <div
          class="dcloud-col dcloud-col-4 dcloud-form-item-label"
        >
          <label
            class=""
            title="TreeSelect"
          >
            TreeSelect
          </label>
        </div>
        <div
          class="dcloud-col dcloud-col-14 dcloud-form-item-control"
        >
          <div
            class="dcloud-form-item-control-input"
          >
            <div
              class="dcloud-form-item-control-input-content"
            >
              <div
                class="dcloud-select dcloud-tree-select dcloud-select-single dcloud-select-show-arrow"
              >
                <div
                  class="dcloud-select-selector"
                >
                  <span
                    class="dcloud-select-selection-search"
                  >
                    <input
                      aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                      aria-autocomplete="list"
                      aria-controls="rc_select_TEST_OR_SSR_list"
                      aria-haspopup="listbox"
                      aria-owns="rc_select_TEST_OR_SSR_list"
                      autocomplete="off"
                      class="dcloud-select-selection-search-input"
                      id="rc_select_TEST_OR_SSR"
                      readonly=""
                      role="combobox"
                      style="opacity: 0;"
                      type="search"
                      unselectable="on"
                      value=""
                    />
                  </span>
                  <span
                    class="dcloud-select-selection-placeholder"
                  />
                </div>
                <span
                  aria-hidden="true"
                  class="dcloud-select-arrow"
                  style="user-select: none;"
                  unselectable="on"
                >
                  <span
                    aria-label="down"
                    class="anticon anticon-down dcloud-select-suffix"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-form-item"
    >
      <div
        class="dcloud-row dcloud-form-item-row"
      >
        <div
          class="dcloud-col dcloud-col-4 dcloud-form-item-label"
        >
          <label
            class=""
            title="Cascader"
          >
            Cascader
          </label>
        </div>
        <div
          class="dcloud-col dcloud-col-14 dcloud-form-item-control"
        >
          <div
            class="dcloud-form-item-control-input"
          >
            <div
              class="dcloud-form-item-control-input-content"
            >
              <div
                class="dcloud-select dcloud-cascader dcloud-select-single dcloud-select-allow-clear dcloud-select-show-arrow"
              >
                <div
                  class="dcloud-select-selector"
                >
                  <span
                    class="dcloud-select-selection-search"
                  >
                    <input
                      aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                      aria-autocomplete="list"
                      aria-controls="rc_select_TEST_OR_SSR_list"
                      aria-haspopup="listbox"
                      aria-owns="rc_select_TEST_OR_SSR_list"
                      autocomplete="off"
                      class="dcloud-select-selection-search-input"
                      id="rc_select_TEST_OR_SSR"
                      readonly=""
                      role="combobox"
                      style="opacity: 0;"
                      type="search"
                      unselectable="on"
                      value=""
                    />
                  </span>
                  <span
                    class="dcloud-select-selection-placeholder"
                  />
                </div>
                <span
                  aria-hidden="true"
                  class="dcloud-select-arrow"
                  style="user-select: none;"
                  unselectable="on"
                >
                  <span
                    aria-label="down"
                    class="anticon anticon-down dcloud-select-suffix"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-form-item"
    >
      <div
        class="dcloud-row dcloud-form-item-row"
      >
        <div
          class="dcloud-col dcloud-col-4 dcloud-form-item-label"
        >
          <label
            class=""
            title="DatePicker"
          >
            DatePicker
          </label>
        </div>
        <div
          class="dcloud-col dcloud-col-14 dcloud-form-item-control"
        >
          <div
            class="dcloud-form-item-control-input"
          >
            <div
              class="dcloud-form-item-control-input-content"
            >
              <div
                class="dcloud-picker"
              >
                <div
                  class="dcloud-picker-input"
                >
                  <input
                    autocomplete="off"
                    placeholder="Select date"
                    readonly=""
                    size="12"
                    title=""
                    value=""
                  />
                  <span
                    class="dcloud-picker-suffix"
                  >
                    <span
                      aria-label="calendar"
                      class="anticon anticon-calendar"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="calendar"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-form-item"
    >
      <div
        class="dcloud-row dcloud-form-item-row"
      >
        <div
          class="dcloud-col dcloud-col-4 dcloud-form-item-label"
        >
          <label
            class=""
            title="RangePicker"
          >
            RangePicker
          </label>
        </div>
        <div
          class="dcloud-col dcloud-col-14 dcloud-form-item-control"
        >
          <div
            class="dcloud-form-item-control-input"
          >
            <div
              class="dcloud-form-item-control-input-content"
            >
              <div
                class="dcloud-picker dcloud-picker-range"
              >
                <div
                  class="dcloud-picker-input dcloud-picker-input-active"
                >
                  <input
                    autocomplete="off"
                    placeholder="Start date"
                    readonly=""
                    size="12"
                    value=""
                  />
                </div>
                <div
                  class="dcloud-picker-range-separator"
                >
                  <span
                    aria-label="to"
                    class="dcloud-picker-separator"
                  >
                    <span
                      aria-label="swap-right"
                      class="anticon anticon-swap-right"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="swap-right"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="0 0 1024 1024"
                        width="1em"
                      >
                        <path
                          d="M873.1 596.2l-164-208A32 32 0 00684 376h-64.8c-6.7 0-10.4 7.7-6.3 13l144.3 183H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h695.9c26.8 0 41.7-30.8 25.2-51.8z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
                <div
                  class="dcloud-picker-input"
                >
                  <input
                    autocomplete="off"
                    placeholder="End date"
                    readonly=""
                    size="12"
                    value=""
                  />
                </div>
                <div
                  class="dcloud-picker-active-bar"
                  style="left: 0px; width: 0px; position: absolute;"
                />
                <span
                  class="dcloud-picker-suffix"
                >
                  <span
                    aria-label="calendar"
                    class="anticon anticon-calendar"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="calendar"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-form-item"
    >
      <div
        class="dcloud-row dcloud-form-item-row"
      >
        <div
          class="dcloud-col dcloud-col-4 dcloud-form-item-label"
        >
          <label
            class=""
            title="InputNumber"
          >
            InputNumber
          </label>
        </div>
        <div
          class="dcloud-col dcloud-col-14 dcloud-form-item-control"
        >
          <div
            class="dcloud-form-item-control-input"
          >
            <div
              class="dcloud-form-item-control-input-content"
            >
              <div
                class="dcloud-input-number"
              >
                <div
                  class="dcloud-input-number-handler-wrap"
                >
                  <span
                    aria-disabled="false"
                    aria-label="Increase Value"
                    class="dcloud-input-number-handler dcloud-input-number-handler-up"
                    role="button"
                    unselectable="on"
                  >
                    <span
                      aria-label="up"
                      class="anticon anticon-up dcloud-input-number-handler-up-inner"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="up"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    aria-disabled="false"
                    aria-label="Decrease Value"
                    class="dcloud-input-number-handler dcloud-input-number-handler-down"
                    role="button"
                    unselectable="on"
                  >
                    <span
                      aria-label="down"
                      class="anticon anticon-down dcloud-input-number-handler-down-inner"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
                <div
                  class="dcloud-input-number-input-wrap"
                >
                  <input
                    autocomplete="off"
                    class="dcloud-input-number-input"
                    role="spinbutton"
                    step="1"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-form-item"
    >
      <div
        class="dcloud-row dcloud-form-item-row"
      >
        <div
          class="dcloud-col dcloud-col-4 dcloud-form-item-label"
        >
          <label
            class=""
            title="TextArea"
          >
            TextArea
          </label>
        </div>
        <div
          class="dcloud-col dcloud-col-14 dcloud-form-item-control"
        >
          <div
            class="dcloud-form-item-control-input"
          >
            <div
              class="dcloud-form-item-control-input-content"
            >
              <textarea
                class="dcloud-input"
                rows="4"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-form-item"
    >
      <div
        class="dcloud-row dcloud-form-item-row"
      >
        <div
          class="dcloud-col dcloud-col-4 dcloud-form-item-label"
        >
          <label
            class=""
            title="Switch"
          >
            Switch
          </label>
        </div>
        <div
          class="dcloud-col dcloud-col-14 dcloud-form-item-control"
        >
          <div
            class="dcloud-form-item-control-input"
          >
            <div
              class="dcloud-form-item-control-input-content"
            >
              <button
                aria-checked="false"
                class="dcloud-switch"
                role="switch"
                type="button"
              >
                <div
                  class="dcloud-switch-handle"
                />
                <span
                  class="dcloud-switch-inner"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-form-item"
    >
      <div
        class="dcloud-row dcloud-form-item-row"
      >
        <div
          class="dcloud-col dcloud-col-4 dcloud-form-item-label"
        >
          <label
            class=""
            title="Upload"
          >
            Upload
          </label>
        </div>
        <div
          class="dcloud-col dcloud-col-14 dcloud-form-item-control"
        >
          <div
            class="dcloud-form-item-control-input"
          >
            <div
              class="dcloud-form-item-control-input-content"
            >
              <span
                class=""
              >
                <div
                  class="dcloud-upload dcloud-upload-select dcloud-upload-select-text"
                  style="display: none;"
                >
                  <span
                    class="dcloud-upload"
                    role="button"
                    tabindex="0"
                  >
                    <input
                      accept=""
                      style="display: none;"
                      type="file"
                    />
                  </span>
                </div>
                <div
                  class="dcloud-upload-list dcloud-upload-list-text"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-form-item"
    >
      <div
        class="dcloud-row dcloud-form-item-row"
      >
        <div
          class="dcloud-col dcloud-col-4 dcloud-form-item-label"
        >
          <label
            class=""
            title="Button"
          >
            Button
          </label>
        </div>
        <div
          class="dcloud-col dcloud-col-14 dcloud-form-item-control"
        >
          <div
            class="dcloud-form-item-control-input"
          >
            <div
              class="dcloud-form-item-control-input-content"
            >
              <button
                class="dcloud-btn"
                type="button"
              >
                <span>
                  Button
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Form rtl render component should be rendered correctly in RTL direction 1`] = `
LoadedCheerio {
  "0": <form
    class="dcloud-form dcloud-form-horizontal dcloud-form-rtl"
  />,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Form rtl render component should be rendered correctly in RTL direction 2`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-form-item"
  >
    <div
      class="dcloud-row dcloud-row-rtl dcloud-form-item-row"
    >
      <div
        class="dcloud-col dcloud-form-item-control dcloud-col-rtl"
      >
        <div
          class="dcloud-form-item-control-input"
        >
          <div
            class="dcloud-form-item-control-input-content"
          />
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
